syntax = "proto3";

package promag.personaldata.v1;

option csharp_namespace = "Promag.Protobuf.PersonalData.V1";

import "promag/common/v1/common.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";

service PersonalApi {
  rpc Ping (google.protobuf.Empty) returns (promag.common.v1.PongReply);
}

message CreateLogInUserRequest {
  string firstName = 1;
  string lastName = 2;
  string userName = 3;
  google.protobuf.StringValue email = 4;
  repeated string roleIds = 5;
}
